--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,17 @@ body {
 }
 
 @keyframes twinkling {
-    0% { opacity: 0.5; }
-    50% { opacity: 1; }
-    100% { opacity: 0.5; }
+    0% {
+        opacity: 0.5;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0.5;
+    }
 }
 
 /* Contenedor principal */
@@ -88,7 +96,7 @@ body {
     height: 0;
     border-left: 140px solid transparent;
     border-right: 140px solid transparent;
-    border-top: 120px solid #fe3334;
+    border-top: 150px solid #fe3334;
     transition: transform 0.75s;
 }
 
@@ -98,16 +106,18 @@ body {
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
-    width: 250px;
-    height: 300px;
+    width: 280px;
+    height: 350px;
     background-color: white;
     border-radius: 8px;
-    padding: 15px;
+    padding: 20px;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: bold;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     opacity: 0;
-    transition: top 0.75s, opacity 0.75s;
+    transition: top 0.75s ease-in-out, opacity 0.75s ease-in-out;
+    z-index: 4;
 }
 
 /* Animación al abrir la carta */
